<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffff">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/ccccc"
                android:layout_marginTop="2dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="#EF0606"
                android:layout_margin="6dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="@dimen/text_margin"
                android:fontFamily="@string/bold"
                android:text=" About City University"
                android:textColor="#FBFBFB"
                android:textSize="24sp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="@dimen/text_margin"
                android:layout_marginLeft="@dimen/text_margin"
                android:layout_marginTop="@dimen/text_margin"
                android:background="#FBFBFB"
                android:layout_margin="6dp"
                android:fontFamily="@string/light"
                android:text="@string/history"
                android:textColor="#070707"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#F60202"
                android:layout_margin="6dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Let’s take a look at the way we traversed over the years"
                    android:textSize="@dimen/title_size1"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:textColor="@color/design_default_color_on_primary"
                    android:fontFamily="@string/bold"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/design_default_color_on_primary"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginHorizontal="@dimen/text_margin"
                    android:layout_marginLeft="@dimen/text_margin"
                    android:layout_marginTop="@dimen/text_margin"
                    android:background="#FBFBFB"
                    android:layout_margin="6dp"
                    android:fontFamily="@string/light"
                    android:text="@string/history2"
                    android:textColor="#070707"
                    android:textSize="15sp" />


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#F60202"
                android:layout_margin="6dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Contact Details"
                    android:textSize="@dimen/title_size1"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:textColor="@color/design_default_color_on_primary"
                    android:fontFamily="@string/bold"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/design_default_color_on_primary"
                android:padding="@dimen/text_margin"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contact1"
                    android:layout_marginHorizontal="@dimen/text_margin"
                    android:textSize="@dimen/text_size01"
                    android:textStyle="bold"
                    android:layout_gravity="left"
                    android:textColor="#070707"
                    android:fontFamily="@string/light"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contact3"
                    android:layout_marginHorizontal="@dimen/text_margin"
                    android:textSize="12sp"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#070707"
                    android:fontFamily="@string/light"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contact4"
                    android:layout_marginHorizontal="@dimen/text_margin"
                    android:textSize="12sp"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#070707"
                    android:fontFamily="@string/light"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contact5"
                    android:layout_marginHorizontal="@dimen/text_margin"
                    android:textSize="12sp"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#070707"
                    android:fontFamily="@string/light"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginHorizontal="@dimen/text_margin"
                    android:fontFamily="@string/light"
                    android:text="City Campus: "
                    android:textColor="#070707"
                    android:textSize="@dimen/text_size01"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contact33"
                    android:layout_marginHorizontal="@dimen/text_margin"
                    android:textSize="12sp"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#070707"
                    android:fontFamily="@string/light"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contact44"
                    android:layout_marginHorizontal="@dimen/text_margin"
                    android:textSize="12sp"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#070707"
                    android:fontFamily="@string/light"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contact55"
                    android:layout_marginHorizontal="@dimen/text_margin"
                    android:textSize="12sp"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#070707"
                    android:fontFamily="@string/light"/>


            </LinearLayout>




            <TextView
                android:id="@+id/back"
                android:background="#E6020A"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Back to HomePage"
                android:layout_marginBottom="10dp"
                android:textSize="@dimen/title_size1"
                android:padding="5dp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/design_default_color_on_primary"
                android:fontFamily="@string/bold"/>







        </LinearLayout>




    </ScrollView>

</FrameLayout>